// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchItem Component should match to snapshot 1`] = `
<li
  className="SearchItem"
>
  <div
    className="SearchItem__toggle-btn"
  >
    <ToggleButton
      checkedValue={
        <i
          className="fa fa-check"
        />
      }
      isCheck={false}
      onToggle={[Function]}
      unCheckedValue={
        <i
          className="fa fa-times"
        />
      }
      width={40}
    />
  </div>
  <p
    className="SearchItem__Text"
  >
    <button
      className="SearchItem__Btn"
      onClick={[Function]}
      onDoubleClick={[Function]}
      type="button"
    >
      <strong
        className="SearchItem__title-text"
      >
        <span>
          mock-name
        </span>
      </strong>
      <span
        className="SearchItem__url-text"
      >
        <span>
          mock-url
        </span>
      </span>
    </button>
  </p>
  <p
    className="SearchItem__BtnSet"
  >
    <button
      className="SearchItem__bookmark-btn"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        className="SearchItem__icon"
        src={Object {}}
      />
    </button>
  </p>
</li>
`;

exports[`Test SearchItem Component should match to snapshot when item.searched === both 1`] = `
<li
  className="SearchItem"
>
  <div
    className="SearchItem__toggle-btn"
  >
    <ToggleButton
      checkedValue={
        <i
          className="fa fa-check"
        />
      }
      isCheck={false}
      onToggle={[Function]}
      unCheckedValue={
        <i
          className="fa fa-times"
        />
      }
      width={40}
    />
  </div>
  <p
    className="SearchItem__Text"
  >
    <button
      className="SearchItem__Btn"
      onClick={[Function]}
      onDoubleClick={[Function]}
      type="button"
    >
      <strong
        className="SearchItem__title-text"
      >
        <HighlightParagraph
          content="mock-name"
          highlightClass=""
          keyword=""
        />
      </strong>
      <span
        className="SearchItem__url-text"
      >
        <HighlightParagraph
          content="mock-url"
          highlightClass=""
          keyword=""
        />
      </span>
    </button>
  </p>
  <p
    className="SearchItem__BtnSet"
  >
    <button
      className="SearchItem__bookmark-btn"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        className="SearchItem__icon"
        src={Object {}}
      />
    </button>
  </p>
</li>
`;
